--- a/index.html
+++ b/index.html
@@ -79,37 +79,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
                     <ul class="nav navbar-nav navbar-right" data-in="#" data-out="#">
-                        <li class="dropdown dropdown-right">
-                            <a href="#home" class="dropdown-toggle smooth-menu" data-toggle="dropdown" >Home</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="index.html">Home Version One</a></li>
-                                <li><a href="index-2.html">Home Version Two</a></li>
-                                <li><a href="index-3.html">Home Version Three</a></li>
-                                <li><a href="index-4.html">Home Version Four</a></li>
-                                <li><a href="index-5.html">Home Version Five</a></li>
-                                <li><a href="index-6.html">Home Version Six</a></li>
-                            </ul>
-                        </li>
                         <li>
-                            <a class="smooth-menu" href="#services">Services</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#about">About</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#process">Process</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#pricing">Pricing</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#team">Team</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#blog">Blog</a>
-                        </li>
-                        <li>
-                            <a class="smooth-menu" href="#contact">Contact</a>
+                            <a class="smooth-menu" href="#contact">Sign Up</a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
@@ -245,7 +216,7 @@
                     <div class="site-heading text-center">
                         <h2>Case Studies</h2>
                         <p>
-                            Here are some of the ways you can build a portal
+                            Here are examples of portals built using Wayportly
                         </p>
                     </div>
                 </div>
