Production Ready for Preview Launch

--- a/index.html
+++ b/index.html
@@ -236,16 +236,13 @@
                                             <strong>01</strong> <h2>Client Portal</h2>
                                         </div>
                                         <p>
-                                            Finished my an likewise cheerful packages we. For assurance concluded son something depending discourse see led collected. Packages oh no denoting my advanced humoured. Pressed be so thought natural. 
-                                        </p>
-                                        <p>
-                                            Sweetness principle discourse shameless bed one excellent. Sentiments of surrounded friendship dispatched connection is he. Produce besides hastily up as pleased. 
+                                            Boutique consultancies and accounting firms alike trust Wayportly's secure web portals to deliver and keep track of engagements and documents.
                                         </p>
                                         <ul>
-                                            <li>Promotion an ourselves</li>
-                                            <li>Conveying has concealed</li>
-                                            <li>Discretion the dispatched</li>
-                                            <li>Middleton principle</li>
+                                            <li>SOC 2 Compliant Security</li>
+                                            <li>Clean, Fluid User Interface</li>
+                                            <li>CCPA and GDPR Compliant</li>
+                                            <li>Centralized Firm Dashboard View</li>
                                         </ul>
                                         <a class="btn btn-theme border btn-md" href="#">Preview Signup</a>
                                     </div>
@@ -264,19 +261,16 @@
                                     </div>
                                     <div class="col-md-6 info">
                                         <div class="title">
-                                            <strong>02</strong> <h2>Optimization</h2>
+                                            <strong>02</strong> <h2>Volunteer Portal</h2>
                                         </div>
                                         <p>
-                                            Finished my an likewise cheerful packages we. For assurance concluded son something depending discourse see led collected. Packages oh no denoting my advanced humoured. Pressed be so thought natural. 
-                                        </p>
-                                        <p>
-                                            Sweetness principle discourse shameless bed one excellent. Sentiments of surrounded friendship dispatched connection is he. Produce besides hastily up as pleased. 
+                                            Associations and conferences use Wayportly to provide delegated access to manage attendee registration and share docs across orgs.
                                         </p>
                                         <ul>
-                                            <li>Promotion an ourselves</li>
-                                            <li>Conveying has concealed</li>
-                                            <li>Discretion the dispatched</li>
-                                            <li>Middleton principle</li>
+                                            <li>Delegated Access for Unlimited Users</li>
+                                            <li>Clean, Fluid User Interface</li>
+                                            <li>CCPA and GDPR Compliant</li>
+                                            <li>Centralized Management View</li>
                                         </ul>
                                         <a class="btn btn-theme border btn-md" href="#">Preview Signup</a>
                                     </div>
@@ -387,7 +381,7 @@
                         <div class="f-item twitter-widget">
                             <h4>Contact Info</h4>
                             <p>
-                                1755 Van Ness Ave #306, San Francisco CA 94109
+                                1755 Van Ness Ave, San Francisco CA 94109
                             </p>
                             <div class="address">
                                 <ul>
