--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/casecarousel.css" rel="stylesheet" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
     <link href="assets/css/flaticon-set.css" rel="stylesheet" />
     <link href="assets/css/magnific-popup.css" rel="stylesheet" />
@@ -230,7 +229,7 @@
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6 thumb">
-                                        <img src="assets/img/tutors-1.jpeg" alt="Thumb">
+                                        <img src="assets/img/800x600.png" alt="Thumb">
                                     </div>
                                     <div class="col-md-6 info">
                                         <div class="title">
@@ -258,43 +257,8 @@
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6 thumb">
-                                        <div id="slideshow-main">
-                                            <ul>
-                                                <li class="p1 active">
-                                                    <a href="#">
-                                                        <img src="assets/img/tutors-1.jpeg" width="430" height="290" alt=""/>
-                                                        <span class="opacity"></span>
-                                                        <span class="content"><h1>Title 1</h1><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p></span>
-                                                    </a>
-                                                </li>
-                                                <li class="p2">
-                                                    <a href="#">
-                                                        <img src="assets/img/tutors-1.jpeg" width="430" height="290" alt=""/>
-                                                        <span class="opacity"></span>
-                                                        <span class="content"><h1>Title 2</h1><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p></span>
-                                                    </a>
-                                                </li>
-                                                <li class="p3">
-                                                    <a href="#">
-                                                        <img src="assets/img/tutors-1.jpeg" width="430" height="290" alt=""/>
-                                                        <span class="opacity"></span>
-                                                        <span class="content"><h1>Title 3</h1><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p></span>
-                                                    </a>
-                                                </li>
-                                            </ul>										
-                                        </div>
-                                                    
-                                        <div id="slideshow-carousel">				
-                                              <ul id="carousel" class="jcarousel jcarousel-skin-tango">
-                                                <li><a href="#" rel="p1"><img src="assets/img/tutors-1.jpeg" width="143" height="96" alt="#"/></a></li>
-                                                <li><a href="#" rel="p2"><img src="assets/img/tutors-1.jpeg" width="143" height="96" alt="#"/></a></li>
-                                                <li><a href="#" rel="p3"><img src="assets/img/tutors-1.jpeg" width="143" height="96" alt="#"/></a></li>
-                                              </ul>
-                                        </div>
-                                            
-                                        <div class="clear"></div>
+                                        <img src="assets/img/800x600.png" alt="Thumb">
                                     </div>
-
                                     <div class="col-md-6 info">
                                         <div class="title">
                                             <strong>02</strong> <h2>Volunteer Portal</h2>
@@ -465,7 +429,6 @@
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/modernizr.custom.13711.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/carousel.js"></script>
     <script src="assets/js/count-to.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/bootsnav.js"></script>
