--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <div class="form col-md-5 col-md-offset-1">
                                 <div class="form-info text-center">
                                     <h4>Sign up today</h4>
-                                    <form action="#">
+                                    <form action="https://formspree.io/xpzpdwlb" method="POST">
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="form-group">
@@ -129,13 +129,6 @@
                                             <div class="row">
                                                 <div class="form-group">
                                                     <input class="form-control" placeholder="Email*" type="email">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12">
-                                            <div class="row">
-                                                <div class="form-group">
-                                                    <input class="form-control" placeholder="City*" type="text">
                                                 </div>
                                             </div>
                                         </div>
@@ -310,25 +303,19 @@
                     
                     <!-- Contact Form -->
                     <div class="col-md-7 col-md-offset-1 contact-form">
-                        <form action="assets/mail/contact.php" method="POST" class="contact-form">
+                        <form action="http://formspree.io/xpzpdwlb" method="POST" class="contact-form">
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="form-group">
-                                        <input class="form-control" id="name" name="name" placeholder="Name" type="text">
+                                        <input class="form-control" id="name" name="name" placeholder="Name *" type="text">
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6">
+                            <div class="col-md-12">
+                                <div class="row">
                                     <div class="form-group">
-                                        <input class="form-control" id="email" name="email" placeholder="Email*" type="email">
-                                        <span class="alert-error"></span>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <input class="form-control" id="city" name="city" placeholder="City" type="text">
+                                        <input class="form-control" id="email" name="email" placeholder="Email *" type="text">
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
@@ -336,14 +323,14 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="form-group comments">
-                                        <textarea class="form-control" id="comments" name="comments" placeholder="Tell Us About Project *"></textarea>
+                                        <textarea class="form-control" id="comments" name="comments" placeholder="What features would you add? *"></textarea>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="row">
-                                    <button type="submit" name="submit" id="submit">
-                                        Preview Signup <i class="fa fa-paper-plane"></i>
+                                    <button type="submit" value="Send" name="submit" id="submit">
+                                        Sign Up <i class="fa fa-paper-plane"></i>
                                     </button>
                                 </div>
                             </div>
