--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <!-- Start Form -->
                             <div class="form col-md-5 col-md-offset-1">
                                 <div class="form-info text-center">
-                                    <h4>Sign up today</h4>
+                                    <h4>Sign Up Today</h4>
                                     <form action="https://formspree.io/xpzpdwlb" method="POST">
                                         <div class="col-md-12">
                                             <div class="row">
@@ -222,7 +222,37 @@
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6 thumb">
-                                        <img src="assets/img/800x600.png" alt="Thumb">
+                                        <div class="testimonial-items testimonial-carousel owl-carousel owl-theme">
+                                            <!-- Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/ac/dashboard.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Dashboard</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                            <!-- Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/ac/invoices.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Invoices and Documents</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/ac/projects.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Projects</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                        </div>
                                     </div>
                                     <div class="col-md-6 info">
                                         <div class="title">
@@ -250,11 +280,41 @@
                             <div class="item">
                                 <div class="row">
                                     <div class="col-md-6 thumb">
-                                        <img src="assets/img/800x600.png" alt="Thumb">
+                                        <div class="testimonial-items testimonial-carousel owl-carousel owl-theme">
+                                            <!-- Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/np/dashboard.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Dashboard</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                            <!-- Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/np/edit-student.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Invoices and Documents</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                            <div class="item">
+                                                <div>
+                                                    <img src="assets/img/np/hours.png">
+                                                </div>
+                                                <div class="info">
+                                                    <h4>Projects</h4>
+                                                </div>
+                                            </div>
+                                            <!-- End Single Item -->
+                                        </div>
                                     </div>
                                     <div class="col-md-6 info">
                                         <div class="title">
-                                            <strong>02</strong> <h2>Volunteer Portal</h2>
+                                            <strong>02</strong> <h2>User Portal</h2>
                                         </div>
                                         <p>
                                             Associations and conferences use Wayportly to provide delegated access to manage attendee registration and share docs across orgs.
