--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="form-group">
-                                        <input class="form-control" id="email" name="email" placeholder="Email *" type="text">
+                                        <input class="form-control" id="email" name="email" placeholder="Email *" type="email">
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
