--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="form-group">
-                                                    <input class="form-control" placeholder="Name*" type="text">
+                                                    <input class="form-control" id="Name_Top" placeholder="Name*" type="text">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <div class="form-group">
-                                                    <input class="form-control" placeholder="Email*" type="email">
+                                                    <input class="form-control" id="Email_Top" placeholder="Email*" type="email">
                                                 </div>
                                             </div>
                                         </div>
