--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                             <li>CCPA and GDPR Compliant</li>
                                             <li>Centralized Firm Dashboard View</li>
                                         </ul>
-                                        <a class="btn btn-theme border btn-md" href="#">Preview Signup</a>
+                                        <a class="btn btn-theme border btn-md" href="#contact">Preview Signup</a>
                                     </div>
                                 </div>
                             </div>
@@ -325,7 +325,7 @@
                                             <li>CCPA and GDPR Compliant</li>
                                             <li>Centralized Management View</li>
                                         </ul>
-                                        <a class="btn btn-theme border btn-md" href="#">Preview Signup</a>
+                                        <a class="btn btn-theme border btn-md" href="#contact">Preview Signup</a>
                                     </div>
                                 </div>
                             </div>
