--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <!-- Start Form -->
                             <div class="form col-md-5 col-md-offset-1">
                                 <div class="form-info text-center">
-                                    <h4>Sign Up Today</h4>
+                                    <h4>Join the Waitlist</h4>
                                     <form action="https://formspree.io/xpzpdwlb" method="POST">
                                         <div class="col-md-12">
                                             <div class="row">
@@ -135,7 +135,7 @@
                                         <div class="col-md-12">
                                             <div class="row">
                                                 <button type="submit">
-                                                    Preview Signup
+                                                    Signup for Beta Access
                                                 </button>
                                             </div>
                                         </div>
@@ -163,7 +163,7 @@
                             <div class="info">
                                 <i class="fas fa-lightbulb"></i>
                                 <p>
-                                    Securely Share Your Accounting Deliverables with Clients
+                                    Create a portal where clients can login, securely see your deliverables, pay invoices, and more.
                                 </p>
                                 <h4>Client Portals</h4>
                             </div>
@@ -174,7 +174,7 @@
                             <div class="info">
                                 <i class="fas fa-user-tie"></i>
                                 <p>
-                                    Organize Teams With Securely Permissioned Views
+                                    Organize your nonprofit volunteers utilizing a portal that allows you to track their progress, send them messages, and more.
                                 </p>
                                 <h4>Volunteer Portals</h4>
                             </div>
@@ -185,9 +185,9 @@
                             <div class="info">
                                 <i class="fas fa-clone"></i>
                                 <p>
-                                    Fast Customization for Hundreds of Use Cases
+                                    Fast customization for hundreds of use cases.
                                 </p>
-                                <h4>Easy Customization</h4>
+                                <h4>Custom Web Apps</h4>
                             </div>
                         </div>
                         <!-- End Single Item -->
@@ -267,7 +267,7 @@
                                             <li>CCPA and GDPR Compliant</li>
                                             <li>Centralized Firm Dashboard View</li>
                                         </ul>
-                                        <a class="btn btn-theme border btn-md" href="#contact">Preview Signup</a>
+                                        <a class="btn btn-theme border btn-md" href="#contact">Join the Waitlist</a>
                                     </div>
                                 </div>
                             </div>
@@ -320,7 +320,7 @@
                                             Associations and conferences use Wayportly to provide delegated access to manage attendee registration and share docs across orgs.
                                         </p>
                                         <ul>
-                                            <li>Delegated Access for Unlimited Users</li>
+                                            <li>Unlimited Delegated Access</li>
                                             <li>Clean, Fluid User Interface</li>
                                             <li>CCPA and GDPR Compliant</li>
                                             <li>Centralized Management View</li>
@@ -345,9 +345,9 @@
             <div class="row">
                 <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2">
                     <div class="site-heading text-center">
-                        <h2>Preview Sign Up</h2>
+                        <h2>Join the Waitlist</h2>
                         <p>
-                            We're releasing a limited preview of our software to early adopters. Sign Up Below!
+                            We're releasing free, beta access to our software for early adopters. Sign Up Below!
                         </p>
                     </div>
                 </div>
@@ -382,13 +382,6 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="row">
-                                    <div class="form-group comments">
-                                        <textarea class="form-control" id="comments" name="comments" placeholder="What features would you add? *"></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="row">
                                     <button type="submit" value="Send" name="submit" id="submit">
                                         Sign Up <i class="fa fa-paper-plane"></i>
                                     </button>
@@ -417,7 +410,7 @@
                         <div class="f-item">
                             <img src="assets/img/logo.png" alt="Logo">
                             <p>
-                                Web Portals, Easy.
+                                Web portals, made easy.
                             </p>
                         </div>
                     </div>
