--- a/index.html
+++ b/index.html
@@ -382,6 +382,13 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="row">
+                                    <div class="form-group comments">
+                                        <textarea class="form-control" id="comments" name="comments" placeholder="What would you build? Any features we should add?"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <div class="row">
                                     <button type="submit" value="Send" name="submit" id="submit">
                                         Sign Up <i class="fa fa-paper-plane"></i>
                                     </button>
@@ -434,7 +441,6 @@
                                             <span><a href="mailto:hello@wayportly.com">hello@wayportly.com</a></span>
                                         </div>
                                     </li>
-                                    
                                 </ul>
                             </div>
                         </div>
